[gd_scene load_steps=23 format=3 uid="uid://c1mja0j0own6p"]

[ext_resource type="Script" path="res://ui/unit_status_detailed.gd" id="1_6m1bp"]
[ext_resource type="Shader" path="res://resources/shaders/BlurShader.gdshader" id="2_etfuc"]
[ext_resource type="Theme" uid="uid://basxgfcidqdr7" path="res://resources/themes/combat/default_ui_theme.tres" id="3_ssh48"]
[ext_resource type="Texture2D" uid="uid://sucjko8qgioh" path="res://resources/sprites/units/destroyer_map.tres" id="4_6drah"]
[ext_resource type="Theme" uid="uid://c55bq2g52bloq" path="res://resources/themes/Unit_status_detailed_panel.tres" id="4_hq6tf"]
[ext_resource type="Theme" uid="uid://d038xrv8o2iwr" path="res://resources/themes/Header_text.tres" id="5_bppi7"]
[ext_resource type="Theme" uid="uid://cm7p7jgsvnp81" path="res://resources/themes/unit_status_subtext.tres" id="6_k8b2s"]
[ext_resource type="FontFile" uid="uid://blovgibarp2q2" path="res://resources/fonts/CrimsonText-Bold.ttf" id="7_77j75"]
[ext_resource type="Texture2D" uid="uid://cm2ddi8728iye" path="res://resources/sprites/items/iron_sword.tres" id="8_0mf55"]
[ext_resource type="Theme" uid="uid://k4mc6dlljs72" path="res://resources/themes/Experience_bar.tres" id="9_bah1f"]
[ext_resource type="FontFile" uid="uid://dmpfmefetl601" path="res://resources/fonts/CrimsonText-SemiBold.ttf" id="10_cchag"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hgufo"]
shader = ExtResource("2_etfuc")
shader_parameter/lod = 3.5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2yp1e"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_plcvx"]
bg_color = Color(0, 0.701961, 0.572549, 1)
corner_radius_top_right = 2
corner_radius_bottom_right = 2
shadow_size = 2

[sub_resource type="Theme" id="Theme_fvh6g"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_2yp1e")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_plcvx")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kjoci"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fcnbp"]
bg_color = Color(0.0605303, 0.0605303, 0.0605303, 1)
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fe6d1"]
bg_color = Color(0.487777, 0.478876, 0.441957, 1)
border_color = Color(5.77569e-07, 0.923315, 0.836303, 1)
border_blend = true
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_detail = 10
shadow_size = 3

[sub_resource type="Theme" id="Theme_147ov"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_kjoci")
ProgressBar/styles/background = SubResource("StyleBoxFlat_fcnbp")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_fe6d1")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_submf"]
bg_color = Color(0.184599, 0.180567, 0.162498, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 10
expand_margin_left = 10.0
expand_margin_right = 15.0
shadow_size = 3

[sub_resource type="Theme" id="Theme_17sy8"]
Label/fonts/font = ExtResource("10_cchag")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_submf")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_064cd"]

[node name="UnitStatusDetailed" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6m1bp")

[node name="BackgroundBlur" type="Panel" parent="."]
material = SubResource("ShaderMaterial_hgufo")
layout_mode = 0
offset_top = 1.0
offset_right = 552.0
offset_bottom = 490.0
theme = ExtResource("3_ssh48")

[node name="LeftPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 250.0
offset_bottom = 482.0
theme = ExtResource("4_hq6tf")

[node name="UnitName" type="Label" parent="LeftPanel"]
layout_mode = 0
offset_left = 5.0
offset_right = 245.0
offset_bottom = 42.0
theme = ExtResource("5_bppi7")
theme_override_constants/outline_size = 4
text = "Zombah St. Rah"
vertical_alignment = 2

[node name="UnitSubHeader" type="Label" parent="LeftPanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 33.0
offset_right = 245.0
offset_bottom = 54.0
theme = ExtResource("5_bppi7")
theme_override_colors/font_color = Color(0.581033, 0.581033, 0.581033, 1)
theme_override_font_sizes/font_size = 16
text = "Level 15 Zombified Villager"

[node name="UnitSprite" type="TextureRect" parent="LeftPanel"]
layout_mode = 0
offset_left = 61.0
offset_top = 55.0
offset_right = 189.0
offset_bottom = 183.0
texture = ExtResource("4_6drah")

[node name="StatsGrid" type="GridContainer" parent="LeftPanel"]
layout_mode = 2
offset_left = 20.0
offset_top = 274.0
offset_right = 231.0
offset_bottom = 398.0
columns = 2

[node name="AttackLabel" type="Label" parent="LeftPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme = ExtResource("6_k8b2s")
theme_override_fonts/font = ExtResource("7_77j75")
theme_override_font_sizes/font_size = 21
text = "DMG"
vertical_alignment = 1

[node name="AttackValue" type="Label" parent="LeftPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme = ExtResource("6_k8b2s")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_77j75")
theme_override_font_sizes/font_size = 21
text = "13"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HitLabel" type="Label" parent="LeftPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
tooltip_text = "The percentage chance of a unit landing a hit in battle"
mouse_filter = 1
theme = ExtResource("6_k8b2s")
theme_override_fonts/font = ExtResource("7_77j75")
theme_override_font_sizes/font_size = 21
text = "HIT"
vertical_alignment = 1

[node name="HitValue" type="Label" parent="LeftPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme = ExtResource("6_k8b2s")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_77j75")
theme_override_font_sizes/font_size = 21
text = "13"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackSpeedLabel" type="Label" parent="LeftPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme = ExtResource("6_k8b2s")
theme_override_fonts/font = ExtResource("7_77j75")
theme_override_font_sizes/font_size = 21
text = "AS"
vertical_alignment = 1

[node name="AttackSpeedValue" type="Label" parent="LeftPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme = ExtResource("6_k8b2s")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_77j75")
theme_override_font_sizes/font_size = 21
text = "13"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AvoidLabel" type="Label" parent="LeftPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme = ExtResource("6_k8b2s")
theme_override_fonts/font = ExtResource("7_77j75")
theme_override_font_sizes/font_size = 21
text = "AVO
"
vertical_alignment = 1

[node name="AvoidValue" type="Label" parent="LeftPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme = ExtResource("6_k8b2s")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_77j75")
theme_override_font_sizes/font_size = 21
text = "13"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="Control" parent="LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 150.0
offset_bottom = -173.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="LeftPanel/HealthBar"]
layout_mode = 0
offset_left = 9.0
offset_top = 39.0
offset_right = 49.0
offset_bottom = 62.0
theme = ExtResource("6_k8b2s")
theme_override_colors/font_color = Color(1, 1, 1, 0.588235)
text = "HP
"

[node name="Value" type="Label" parent="LeftPanel/HealthBar"]
layout_mode = 0
offset_left = 51.0
offset_top = 31.0
offset_right = 227.0
offset_bottom = 63.0
theme = ExtResource("5_bppi7")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "0042 / 0212"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Bar" type="ProgressBar" parent="LeftPanel/HealthBar"]
layout_mode = 0
offset_left = 10.0
offset_top = 62.0
offset_right = 240.0
offset_bottom = 72.0
theme = SubResource("Theme_fvh6g")
value = 45.0
rounded = true
show_percentage = false

[node name="ExperienceBar" type="Control" parent="LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 193.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="LeftPanel/ExperienceBar"]
layout_mode = 0
offset_left = 9.0
offset_top = 39.0
offset_right = 49.0
offset_bottom = 62.0
theme = ExtResource("6_k8b2s")
theme_override_colors/font_color = Color(1, 1, 1, 0.588235)
text = "XP"

[node name="Value" type="Label" parent="LeftPanel/ExperienceBar"]
layout_mode = 0
offset_left = 51.0
offset_top = 31.0
offset_right = 227.0
offset_bottom = 63.0
theme = ExtResource("5_bppi7")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "0042 / 0212"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Bar" type="ProgressBar" parent="LeftPanel/ExperienceBar"]
layout_mode = 0
offset_left = 10.0
offset_top = 59.0
offset_right = 240.0
offset_bottom = 69.0
theme = ExtResource("9_bah1f")
rounded = true
show_percentage = false

[node name="RightPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 255.0
offset_right = 550.0
offset_bottom = 482.0
theme = ExtResource("4_hq6tf")

[node name="StatsGrid" type="GridContainer" parent="RightPanel"]
layout_mode = 0
offset_left = 7.0
offset_top = 5.0
offset_right = 287.0
offset_bottom = 225.0
theme = SubResource("Theme_147ov")
columns = 2

[node name="StrengthLabel" type="Label" parent="RightPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme = ExtResource("6_k8b2s")
theme_override_fonts/font = ExtResource("7_77j75")
theme_override_font_sizes/font_size = 21
text = "Strength"
vertical_alignment = 1

[node name="StrengthContainer" type="PanelContainer" parent="RightPanel/StatsGrid"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bar" type="ProgressBar" parent="RightPanel/StatsGrid/StrengthContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
max_value = 30.0
value = 1.0
rounded = true
show_percentage = false

[node name="Value" type="Label" parent="RightPanel/StatsGrid/StrengthContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
theme = ExtResource("6_k8b2s")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_77j75")
theme_override_font_sizes/font_size = 21
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MagicLabel" type="Label" parent="RightPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme = ExtResource("6_k8b2s")
theme_override_fonts/font = ExtResource("7_77j75")
theme_override_font_sizes/font_size = 21
text = "Magic"
vertical_alignment = 1

[node name="MagicContainer" type="PanelContainer" parent="RightPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bar" type="ProgressBar" parent="RightPanel/StatsGrid/MagicContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
value = 75.0
show_percentage = false

[node name="Value" type="Label" parent="RightPanel/StatsGrid/MagicContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
theme = ExtResource("6_k8b2s")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_77j75")
theme_override_font_sizes/font_size = 21
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkillLabel" type="Label" parent="RightPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme = ExtResource("6_k8b2s")
theme_override_fonts/font = ExtResource("7_77j75")
theme_override_font_sizes/font_size = 21
text = "Skill"
vertical_alignment = 1

[node name="SkillContainer" type="PanelContainer" parent="RightPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bar" type="ProgressBar" parent="RightPanel/StatsGrid/SkillContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
value = 75.0
show_percentage = false

[node name="Value" type="Label" parent="RightPanel/StatsGrid/SkillContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
theme = ExtResource("6_k8b2s")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_77j75")
theme_override_font_sizes/font_size = 21
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpeedLabel" type="Label" parent="RightPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme = ExtResource("6_k8b2s")
theme_override_fonts/font = ExtResource("7_77j75")
theme_override_font_sizes/font_size = 21
text = "Speed
"
vertical_alignment = 1

[node name="SpeedContainer" type="PanelContainer" parent="RightPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bar" type="ProgressBar" parent="RightPanel/StatsGrid/SpeedContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
value = 75.0
show_percentage = false

[node name="Value" type="Label" parent="RightPanel/StatsGrid/SpeedContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
theme = ExtResource("6_k8b2s")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_77j75")
theme_override_font_sizes/font_size = 21
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LuckLabel" type="Label" parent="RightPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme = ExtResource("6_k8b2s")
theme_override_fonts/font = ExtResource("7_77j75")
theme_override_font_sizes/font_size = 21
text = "Luck"
vertical_alignment = 1

[node name="LuckContainer" type="PanelContainer" parent="RightPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bar" type="ProgressBar" parent="RightPanel/StatsGrid/LuckContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
value = 75.0
show_percentage = false

[node name="Value" type="Label" parent="RightPanel/StatsGrid/LuckContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
theme = ExtResource("6_k8b2s")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_77j75")
theme_override_font_sizes/font_size = 21
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DefenseLabel" type="Label" parent="RightPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme = ExtResource("6_k8b2s")
theme_override_fonts/font = ExtResource("7_77j75")
theme_override_font_sizes/font_size = 21
text = "Defense"
vertical_alignment = 1

[node name="DefenseContainer" type="PanelContainer" parent="RightPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bar" type="ProgressBar" parent="RightPanel/StatsGrid/DefenseContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
value = 75.0
show_percentage = false

[node name="Value" type="Label" parent="RightPanel/StatsGrid/DefenseContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
theme = ExtResource("6_k8b2s")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_77j75")
theme_override_font_sizes/font_size = 21
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MagicDefenseLabel" type="Label" parent="RightPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme = ExtResource("6_k8b2s")
theme_override_fonts/font = ExtResource("7_77j75")
theme_override_font_sizes/font_size = 21
text = "M Defense"
vertical_alignment = 1

[node name="MagicDefenseContainer" type="PanelContainer" parent="RightPanel/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bar" type="ProgressBar" parent="RightPanel/StatsGrid/MagicDefenseContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
value = 75.0
show_percentage = false

[node name="Value" type="Label" parent="RightPanel/StatsGrid/MagicDefenseContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
theme = ExtResource("6_k8b2s")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_77j75")
theme_override_font_sizes/font_size = 21
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InventoryHeader" type="Label" parent="RightPanel"]
layout_mode = 0
offset_left = 3.0
offset_top = 223.0
offset_right = 294.0
offset_bottom = 265.0
theme = ExtResource("5_bppi7")
theme_override_constants/outline_size = 4
text = "Inventory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Inventory" type="VBoxContainer" parent="RightPanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 258.0
offset_right = 272.0
offset_bottom = 471.0
theme = SubResource("Theme_17sy8")

[node name="Slot1Container" type="PanelContainer" parent="RightPanel/Inventory"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Equipped" type="Label" parent="RightPanel/Inventory/Slot1Container"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("6_k8b2s")
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "E"

[node name="HBoxContainer" type="HBoxContainer" parent="RightPanel/Inventory/Slot1Container"]
layout_mode = 2

[node name="icon" type="TextureRect" parent="RightPanel/Inventory/Slot1Container/HBoxContainer"]
layout_mode = 2
texture = ExtResource("8_0mf55")
expand_mode = 3

[node name="Name" type="Label" parent="RightPanel/Inventory/Slot1Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Iron Sword"

[node name="Uses" type="Label" parent="RightPanel/Inventory/Slot1Container/HBoxContainer"]
layout_mode = 2
text = "46"

[node name="Slot2Container" type="PanelContainer" parent="RightPanel/Inventory"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Equipped" type="Label" parent="RightPanel/Inventory/Slot2Container"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("6_k8b2s")
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "E"

[node name="HBoxContainer" type="HBoxContainer" parent="RightPanel/Inventory/Slot2Container"]
layout_mode = 2

[node name="icon" type="TextureRect" parent="RightPanel/Inventory/Slot2Container/HBoxContainer"]
material = SubResource("ShaderMaterial_064cd")
layout_mode = 2
texture = ExtResource("8_0mf55")
expand_mode = 3

[node name="Name" type="Label" parent="RightPanel/Inventory/Slot2Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "--"

[node name="Uses" type="Label" parent="RightPanel/Inventory/Slot2Container/HBoxContainer"]
layout_mode = 2
text = "46"

[node name="Slot3Container" type="PanelContainer" parent="RightPanel/Inventory"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Equipped" type="Label" parent="RightPanel/Inventory/Slot3Container"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("6_k8b2s")
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "E"

[node name="HBoxContainer" type="HBoxContainer" parent="RightPanel/Inventory/Slot3Container"]
layout_mode = 2

[node name="icon" type="TextureRect" parent="RightPanel/Inventory/Slot3Container/HBoxContainer"]
material = SubResource("ShaderMaterial_064cd")
layout_mode = 2
texture = ExtResource("8_0mf55")
expand_mode = 3

[node name="Name" type="Label" parent="RightPanel/Inventory/Slot3Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Iron Sword"

[node name="Uses" type="Label" parent="RightPanel/Inventory/Slot3Container/HBoxContainer"]
layout_mode = 2
text = "46"

[node name="Slot4Container" type="PanelContainer" parent="RightPanel/Inventory"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Equipped" type="Label" parent="RightPanel/Inventory/Slot4Container"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("6_k8b2s")
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "E"

[node name="HBoxContainer" type="HBoxContainer" parent="RightPanel/Inventory/Slot4Container"]
layout_mode = 2

[node name="icon" type="TextureRect" parent="RightPanel/Inventory/Slot4Container/HBoxContainer"]
material = SubResource("ShaderMaterial_064cd")
layout_mode = 2
texture = ExtResource("8_0mf55")
expand_mode = 3

[node name="Name" type="Label" parent="RightPanel/Inventory/Slot4Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Iron Sword"

[node name="Uses" type="Label" parent="RightPanel/Inventory/Slot4Container/HBoxContainer"]
layout_mode = 2
text = "46"
